--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./assets/svc/nav-bar/logo.svg" alt="logo">
+            <img src="./assets/svgs/nav-bar/logo.svg" alt="logo">
         </div>
         <i class="fa-solid fa-bars"></i>
         <nav class="nav-links">
@@ -20,7 +20,7 @@
             <a href="">Projects</a>
             <a href="">Blog</a>
             <a href="">Book a call</a>
-            <a href=""><img src="./assets/svc/nav-bar/arrow.svg" alt=""></a>
+            <a href=""><img src="./assets/svgs/arrow.svg" alt=""></a>
             
         </nav>
     </header>
