--- a/index.html
+++ b/index.html
@@ -15,15 +15,31 @@
         </div>
         <i class="fa-solid fa-bars"></i>
         <nav class="nav-links">
-            <a href="">About</a>
-            <a href="">Services</a>
-            <a href="">Projects</a>
-            <a href="">Blog</a>
-            <a href="">Book a call</a>
-            <a href=""><img src="./assets/svgs/arrow.svg" alt=""></a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Projects</a>
+            <a href="#">Blog</a>
+            <a href="#">Book a call</a>
+            <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
             
         </nav>
     </header>
+
+    <section class="introsection">
+        <div class="life-side">
+            <h1><span>I design products</span><br> that delight and <br> inspire people.</h1>
+            <small>Hi! I’m Jake, a product designer based in Berlin. I create <br> user-friendly interfaces for fast-growing startups.</small>
+            <div class="book-a-call">
+                <button>Book a call</button>
+                <a href="./assets/pdf/cv.pdf" download>Download CV</a>
+                <a href="#"><img src="./assets/svgs/arrow.svg" alt="cv"></a>
+            </div>
+        </div>
+        <div class="right-side">
+            <img src="./assets/svgs/introsection/profile.svg" alt="profile">
+        </div>
+
+    </section>
 
 </body>
 </html>
