--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section class="introsection">
-        <div class="life-side">
+        <div class="left-side">
             <h1><span>I design products</span><br> that delight and <br> inspire people.</h1>
             <small>Hi! I’m Jake, a product designer based in Berlin. I create <br> user-friendly interfaces for fast-growing startups.</small>
             <div class="book-a-call">
