Trusted-by-companents-section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
         </div>
 
     </section>
+    <section class="Trusted-by-companents-section">
+
+        <h3>Trusted by</h3>
+            <div class="Trusted-by-companents">
+            <div class="companents1">
+                <img src="./assets/svgs/trusted-companents/companents1.svg" alt="">
+            </div>
+            <div class="companents2">
+                <img src="./assets/svgs/trusted-companents/companents2.svg" alt="">
+
+            </div>
+            <div class="companents3">
+                <img src="./assets/svgs/trusted-companents/companents3.svg" alt="">
+
+            </div>
+            <div class="companents4">
+                <img src="./assets/svgs/trusted-companents/companents4.svg" alt="">
+            </div>
+                
+        </div>
+    </section>
 
 </body>
 </html>
