--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
 
     </section>
+
     <section class="Trusted-by-companents-section">
 
         <h3>Trusted by</h3>
@@ -62,5 +63,41 @@
         </div>
     </section>
 
+    <section class="services-section">
+        <h4>SERVICES</h4>
+        <h1>Design that solves problems, <br> one product at a time.</h1>
+        <div class="services-carts">
+            <div class="service-card">
+              <img src="./assets/svgs/services-section/service-card1.svg" alt="">
+              <h4>What I can do for you</h4>
+              <p>Faster, better products that your <br> users love. Here's all the services I <br> provide:</p>
+              <ul>
+                <li>Design Strategy</li>
+                <li>Web and Mobile App Design</li>
+                <li>Front-end Development</li>
+              </ul>
+            </div>
+            <div class="service-card">
+                <img src="./assets/svgs/services-section/service-card2.svg" alt="">
+                <h4>Applications I'm fluent in</h4>
+                <p>Every designer needs the right <br> tools to do the perfect job. <br> Thankfully, I'm multilingual.</p>
+                <ul>
+                    <li>Sketch</li>
+                    <li>Webflow</li>
+                    <li>Figma</li>
+                </ul>
+            </div>
+            <div class="service-card">
+                <img src="./assets/svgs/services-section/service-card3.svg" alt="">
+                <h4>What you can expect</h4>
+                <p>I design products that are more <br> than pretty. I make them shippable <br> and usable.</p>
+                <ul>
+                    <li>Clean and functional</li>
+                    <li>Device and user friendly</li>
+                    <li>Device and user friendly</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
