--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <section class="services-section">
         <h4>SERVICES</h4>
         <h1>Design that solves problems, <br> one product at a time.</h1>
-        <div class="services-carts">
+        <div class="services-cards">
             <div class="service-card">
               <img src="./assets/svgs/services-section/service-card1.svg" alt="">
               <h4>What I can do for you</h4>
-              <p>Faster, better products that your <br> users love. Here's all the services I <br> provide:</p>
+              <p>Faster, better products that your <br> users love. Here's all the services <br> I  provide:</p>
               <ul>
                 <li>Design Strategy</li>
                 <li>Web and Mobile App Design</li>
