services yarisi hazir

--- a/index.html
+++ b/index.html
@@ -99,5 +99,58 @@
             </div>
         </div>
     </section>
+
+    <section class="projects-section">
+        <div class="projects-text">
+            <h4>PROJECTS</h4>
+
+            <div class="projects-text-button">
+                <p>I bring results. <br> My clients are proof.</p>
+                <button>View all projects</button>
+            </div>
+        </div>
+
+            <div class="projects-cards">
+                <!-- cart1 -->
+                <div class="card">
+                    <div class="card-top">
+                        <img src="./assets/svgs/projects-card/card1.svg" alt="">
+                    </div>
+                    <div class="card-bottom">
+                        <h5>Branding</h5>
+                        <h4>Soulful Rebrand</h4>
+                        <a>View Project</a> 
+                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                    </div>  
+                </div>
+                <!-- cart2 -->
+                <div class="card">
+                    <div class="card-top">
+                        <img src="./assets/svgs/projects-card/card2.svg" alt="">
+                    </div>
+                    <div class="card-bottom">
+                        <h5>Product Design</h5>
+                        <h4>Datadash Product design</h4>
+                        <a>View Project</a>
+                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                    </div>
+                     
+                </div>
+                <!-- cart3 -->
+                <div class="card">
+                    <div class="card-top">
+                        <img src="./assets/svgs/projects-card/card3.svg" alt="">
+                    </div>
+                    <div class="card-bottom">
+                        <h5>Web Design</h5>
+                        <h4>Maize Website Design</h4>
+                        <a>View Project</a>
+                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                    </div>
+                   
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
