--- a/index.html
+++ b/index.html
@@ -114,39 +114,45 @@
                 <!-- cart1 -->
                 <div class="card">
                     <div class="card-top">
-                        <img src="./assets/svgs/projects-card/card1.svg" alt="">
+                        <img src="./assets/svgs/projects-card/card1.svg" alt="Branding">
                     </div>
                     <div class="card-bottom">
                         <h5>Branding</h5>
                         <h4>Soulful Rebrand</h4>
-                        <a>View Project</a> 
+                        <div class="projects-cards-link">
+                        <a class="view-project">View Project</a> 
                         <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                    </div>
                     </div>  
                 </div>
                 <!-- cart2 -->
                 <div class="card">
                     <div class="card-top">
-                        <img src="./assets/svgs/projects-card/card2.svg" alt="">
+                        <img src="./assets/svgs/projects-card/card2.svg" alt="Product Design">
                     </div>
                     <div class="card-bottom">
                         <h5>Product Design</h5>
                         <h4>Datadash Product design</h4>
-                        <a>View Project</a>
+                        <div class="projects-cards-link">
+                        <a class="view-project">View Project</a>
                         <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                    </div>
                     </div>
                      
                 </div>
                 <!-- cart3 -->
                 <div class="card">
                     <div class="card-top">
-                        <img src="./assets/svgs/projects-card/card3.svg" alt="">
+                        <img src="./assets/svgs/projects-card/card3.svg" alt="Web Design">
                     </div>
-                    <div class="card-bottom">
-                        <h5>Web Design</h5>
-                        <h4>Maize Website Design</h4>
-                        <a>View Project</a>
-                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
-                    </div>
+                      <div class="card-bottom">
+                         <h5>Web Design</h5>
+                         <h4>Maize Website Design</h4>
+                         <div class="projects-cards-link">
+                         <a class="view-project">View Project</a>
+                         <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                         </div>
+                      </div>
                    
                 </div>
             </div>
