blog-section bitdi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <title>Document</title>
 </head>
 <body>
@@ -41,10 +43,10 @@
 
     </section>
 
-    <section class="Trusted-by-companents-section">
+    <section class="trusted-by-companents-section">
 
         <h3>Trusted by</h3>
-            <div class="Trusted-by-companents">
+            <div class="trusted-by-companents">
             <div class="companents1">
                 <img src="./assets/svgs/trusted-companents/companents1.svg" alt="">
             </div>
@@ -157,6 +159,67 @@
                 </div>
             </div>
         </div>
+    </section>
+
+
+    <section class="blog-section">
+       <div class="arrow">
+            <span class="material-symbols-outlined">chevron_left</span>
+                <span class="material-symbols-outlined">chevron_right</span>
+       </div>
+       <div class="main">
+        <div class="blog-left-side">
+         <h5>BLOGS</h5>
+         <h1>Latest Blogs</h1>
+           <div class="main-blog-link">
+            <a class="view-all" href="#">View all</a>
+            <a href="#"><img class="arrow-white"  src="./assets/svgs/arrow-white.svg" alt=""></a>
+           </div>
+        </div>
+        <div class="blog-right-side">
+            <div class="article">
+               <h6>April 16, 2021 .6 mins</h6>
+               <h4>Design tips for designers, that cover <br> everything you need</h4>
+               <div class="article-arrow">
+                <a class="view-all" href="">Read the article</a>
+                 <a href=""><img class="arrow-white"  src="./assets/svgs/arrow-white.svg" alt=""></a>
+               </div>
+            </div>
+            <div class="article">
+                <h6>April 16, 2021 .5 mins</h6>
+                <h4>How to build rapport with your web design <br> clients</h4>
+                <div class="article-arrow">
+                 <a class="view-all" href="#">Read the article</a>
+                  <a  href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                </div>
+            </div>
+            <div class="article">
+                <h6>April 16, 2021 .5 mins</h6>
+                <h4>Top 6 free website mockup tools 2021</h4>
+                <div class="article-arrow">
+                 <a class="view-all" href="#">Read the article</a>
+                  <a  href="#"><img class="arrow-white"  src="./assets/svgs/arrow-white.svg" alt=""></a>
+                </div>
+            </div>
+            <div class="article">
+                <h6>April 16, 2021 .7 mins</h6>
+                <h4>Logo design trends to avoid in 2021</h4>
+                <div class="article-arrow">
+                 <a class="view-all" href="#">Read the article</a>
+                  <a href="#"><img class="arrow-white"  src="./assets/svgs/arrow-white.svg" alt=""></a>
+                </div>
+            </div>
+            <div class="article">
+                <h6>April 16, 2021 .7 mins</h6>
+                <h4>22 best UI design tools</h4>
+                <div class="article-arrow">
+                 <a class="view-all" href="">Read the article</a>
+                  <a  href="#"><img class="arrow-white"  src="./assets/svgs/arrow-white.svg" alt=""></a>
+                </div>
+            </div>
+
+        </div>
+       </div>
     </section>
 </body>
 </html>
