product-image bitdi

--- a/index.html
+++ b/index.html
@@ -221,5 +221,34 @@
         </div>
        </div>
     </section>
+
+    <section class="product-designer-section">
+        <div class="product-text">
+             <div class="product-left">
+                <h1>Product Designer</h1>
+                <p>That's me!</p>
+             </div>
+             <div class="product-right">
+                <p>Over the past 12 years, I've worked with a diverse range of  <br> clients, from startups to Fortune 500 companies. I love crafting <br> interfaces that delight users and help businesses grow.</p>
+             </div>
+        </div>
+        <div class="product-image">
+            <div class="image-telefone"><img src="./assets/svgs/product-designer-section/designer1.svg" alt=""></div>
+            <div class="image-boy"><img src="./assets/svgs/product-designer-section/designer2.svg" alt=""></div>
+            <div class="image-group">
+                <div class="image-notebook"><img src="./assets/svgs/product-designer-section/designer3.svg" alt=""></div>
+                <div class="image-girl"><img src="./assets/svgs/product-designer-section/designer4.svg" alt=""></div>
+            </div>
+        </div>
+    </section>
+   
+    <section class="education-work-experience-section">
+        <div class="education">
+            <h1>Education</h1>
+        </div>
+        <div class="work-experience">
+            <h1></h1>
+        </div>
+    </section>
 </body>
 </html>
