--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <section class="education-work-experience-section">
         <div class="education">
-            <h1>Education</h1>
+            <h1>📚 Education</h1>
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>Stanford University</h4>
@@ -349,6 +349,100 @@
                     </div>
             </div>
         </div>
+    </section>
+
+    <section class="faq-section">
+       <div class="faq-part">
+        <h4>FAQ</h4>
+        <p>Frequently asked questions</p>
+       </div>
+        <div class="faq-section-comtanents">
+         <div class="comtanent-part">
+            <div>
+                <h3>What type of projects do you take on?</h3>
+                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+            <div>
+                <h3>What is your hourly rate?</h3>
+                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+            <div>
+                <h3>What time-zone do you work in?</h3>
+                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+            <div>
+                <h3>What is the typical timeline for a project?</h3> 
+                 <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+         </div>
+         <div class="comtanent-part">
+            <div>
+                <h3>How do you charge for projects ?</h3>
+                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+            <div>
+                <h3>What does your design process look like?</h3>
+                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+            <div>
+                <h3>What metrics do you use to measure success?</h3>
+                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+            <div>
+                <h3>What if I need help after the project is complete?</h3> 
+                 <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+            </div>
+         </div>
+        </div>
+
+        <div class="ready-section">
+            <div class="ready-head">
+                <h1>Ready to make something kickass?</h1>
+                <h2>Let's get on a call.</h2>
+            </div>
+            <div class="ready-logo-about">
+               <div class="ready-logo-part">
+                <img src="./assets/svgs/ready-logo/logo.svg" alt="portfolio creator">
+                <h6>4353 Delaware Avenue, San Francisco, USA</h6>
+                   <div class="adress">
+                       <img src="./assets/svgs/ready-logo/mail.svg" alt=""> 
+                       <span>hi@thefolio.com</span>
+                   </div>
+               </div>
+               <div class="ready-about-part">
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Dribbble</li>
+                </ul>
+                <ul>
+                    <li>Services</li>
+                    <li>Blog</li>
+                    <li>Instagram</li>
+                </ul>
+                <ul>
+                    <li>Experience</li>
+                    <li>Projects</li>
+                    <li>Twitter</li>
+                </ul>
+               </div>
+             </div>
+        </div>
+ <div class="footer">
+       <div>
+         <span>© All rights reserved.</span>
+         <span>Sumit Hegde</span>
+         <span>. Powered by</span>
+         <span>Webflow</span>
+       </div>
+       <div>
+         <span>/ Image License Info</span>
+         <span>/ Instructions</span>
+         <span>/ Changelog</span>
+         <span>/ Style Guide</span>
+      </div>
+ </div>
+
     </section>
 </body>
 
