--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 fast-growing startups.</small>
             <div class="book-a-call">
                 <button>Book a call</button>
-                <a href="./assets/pdf/cv.pdf" download>Download CV</a>
-                <a href="#"><img src="./assets/svgs/arrow.svg" alt="cv"></a>
+                <a class="introsection-cv" href="./assets/pdf/cv.pdf" download>Download CV</a>
+                <a class="introsection-arrow" href="#"><img class="introsection-arrow-img" src="./assets/svgs/arrow.svg" alt="cv"></a>
             </div>
         </div>
         <div class="right-side">
@@ -129,7 +129,7 @@
                     <h4>Soulful Rebrand</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                     <h4>Datadash Product design</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
                     </div>
                 </div>
 
@@ -158,7 +158,7 @@
                     <h4>Maize Website Design</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
                     </div>
                 </div>
 
@@ -256,7 +256,7 @@
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>Stanford University</h4>
-                    <img src="./assets/svgs/education-work-section/arrow.svg" alt="">
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
                 </div>
                 <div class="education-companent-bottom">
                     <h6>MSc (Human Computer Interaction)</h6>
@@ -266,7 +266,7 @@
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>MIT Summer School</h4>
-                    <img src="./assets/svgs/education-work-section/arrow.svg" alt="">
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
                 </div>
                 <div class="education-companent-bottom">
                     <h6>UX Training Bootcamp</h6>
@@ -276,7 +276,7 @@
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>California State University</h4>
-                    <img src="./assets/svgs/education-work-section/arrow.svg" alt="">
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
                 </div>
                 <div class="education-companent-bottom">
                     <h6>BSc in Software Engineering</h6>
@@ -290,7 +290,7 @@
                 <div class="work-icon cehrayi"><img src="./assets/svgs/education-work-section/icon1.svg" alt=""> </div>
                 <div class="work-experience-companent-top">
                     <h4>SpaceFleet</h4>
-                    <img src="./assets/svgs/education-work-section/arrow.svg" alt="">
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
                 </div>
                 <div class="work-experience-companent-bottom">
                     <h6>Senior Product Designer</h6>
@@ -301,7 +301,7 @@
                 <div class="work-icon mavi"><img src="./assets/svgs/education-work-section/icon2.svg" alt=""> </div>
                 <div class="work-experience-companent-top">
                     <h4>MusicMash</h4>
-                    <img src="./assets/svgs/education-work-section/arrow.svg" alt="">
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
                 </div>
                 <div class="work-experience-companent-bottom">
                     <h6>Information Architect</h6>
@@ -312,7 +312,7 @@
                 <div class="work-icon sari"><img src="./assets/svgs/education-work-section/icon3.svg" alt=""> </div>
                 <div class="work-experience-companent-top">
                     <h4>Kingdom</h4>
-                    <img src="./assets/svgs/education-work-section/arrow.svg" alt="">
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
                 </div>
                 <div class="work-experience-companent-bottom">
                     <h6>UI Designer</h6>
@@ -356,41 +356,41 @@
         <h4>FAQ</h4>
         <p>Frequently asked questions</p>
        </div>
-        <div class="faq-section-comtanents">
-         <div class="comtanent-part">
+        <div class="faq-section-companents">
+         <div class="companent-part">
             <div>
                 <h3>What type of projects do you take on?</h3>
-                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
             <div>
                 <h3>What is your hourly rate?</h3>
-                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
             <div>
                 <h3>What time-zone do you work in?</h3>
-                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
             <div>
                 <h3>What is the typical timeline for a project?</h3> 
-                 <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
          </div>
-         <div class="comtanent-part">
+         <div class="companent-part">
             <div>
                 <h3>How do you charge for projects ?</h3>
-                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
             <div>
                 <h3>What does your design process look like?</h3>
-                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
             <div>
                 <h3>What metrics do you use to measure success?</h3>
-                <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
             <div>
                 <h3>What if I need help after the project is complete?</h3> 
-                 <img src="./assets/svgs/faq-section/arrow.svg" alt="">
+                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
             </div>
          </div>
         </div>
@@ -430,16 +430,16 @@
         </div>
  <div class="footer">
        <div>
-         <span>© All rights reserved.</span>
-         <span>Sumit Hegde</span>
-         <span>. Powered by</span>
-         <span>Webflow</span>
+         <a href="#">© All rights reserved.</a>
+         <a href="#">Sumit Hegde</a>
+         <a href="#">. Powered by</a>
+         <a>Webflow</a>
        </div>
        <div>
-         <span>/ Image License Info</span>
-         <span>/ Instructions</span>
-         <span>/ Changelog</span>
-         <span>/ Style Guide</span>
+         <a href="#">/ Image License Info</a>
+         <a href="#">/ Instructions</a>
+         <a href="#">/ Changelog</a>
+         <a href="#">/ Style Guide</a>
       </div>
  </div>
 
