--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
             </div>
         </div>
         <div class="product-image">
-            <div class="image-telefone"><img src="./assets/svgs/product-designer-section/designer1.svg" alt=""></div>
-            <div class="image-boy"><img src="./assets/svgs/product-designer-section/designer2.svg" alt=""></div>
+            <div class="image-telefone"><img src="./assets/svgs/product-designer-section/designer1.svg" alt="telefone"></div>
+            <div class="image-boy"><img src="./assets/svgs/product-designer-section/designer2.svg" alt="boy"></div>
             <div class="image-group">
-                <div class="image-notebook"><img src="./assets/svgs/product-designer-section/designer3.svg" alt="">
+                <div class="image-notebook"><img src="./assets/svgs/product-designer-section/designer3.svg" alt="notebook">
                 </div>
-                <div class="image-girl"><img src="./assets/svgs/product-designer-section/designer4.svg" alt=""></div>
+                <div class="image-girl"><img src="./assets/svgs/product-designer-section/designer4.svg" alt="girl"></div>
             </div>
         </div>
     </section>
