--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </div>
     </section>
 
-    <section class="faq-section">
+    <footer class="faq-section">
        <div class="faq-part">
         <h4>FAQ</h4>
         <p>Frequently asked questions</p>
@@ -443,7 +443,7 @@
       </div>
  </div>
 
-    </section>
+    </footer>
 </body>
 
 </html>
