--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         </div>
         <i class="fa-solid fa-bars"></i>
         <nav class="nav-links">
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Projects</a>
-            <a href="#">Blog</a>
-            <a href="#">Book a call</a>
-            <a href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+            <a href="#product-designer-section">About</a>
+            <a href="#services-section">Services</a>
+            <a href="#projects-section">Projects</a>
+            <a href="#blog-section">Blog</a>
+            <a href="#introsection">Book a call</a>
+            <a href="#faq-section"><img src="./assets/svgs/arrow.svg" alt=""></a>
 
         </nav>
     </header>
 
-    <section class="introsection">
+    <section class="introsection" id="introsection">
         <div class="left-side">
             <h1><span>I design products</span><br> that delight and <br> inspire people.</h1>
             <small>Hi! I’m Jake, a product designer based in Berlin. I create <br> user-friendly interfaces for
@@ -48,7 +48,7 @@
 
     </section>
 
-    <section class="trusted-by-companents-section">
+    <section class="trusted-by-companents-section" >
 
         <h3>Trusted by</h3>
         <div class="trusted-by-companents">
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-    <section class="services-section">
+    <section class="services-section" id="services-section">
         <h4>SERVICES</h4>
         <h1>Design that solves problems, <br> one product at a time.</h1>
         <div class="services-cards">
@@ -108,7 +108,7 @@
         </div>
     </section>
 
-    <section class="projects-section">
+    <section class="projects-section" id="projects-section">
         <div class="projects-text">
             <h4>PROJECTS</h4>
 
@@ -168,7 +168,7 @@
     </section>
 
 
-    <section class="blog-section">
+    <section class="blog-section" id="blog-section">
         <div class="arrow">
             <span class="material-symbols-outlined">chevron_left</span>
             <span class="material-symbols-outlined">chevron_right</span>
@@ -228,7 +228,7 @@
         </div>
     </section>
 
-    <section class="product-designer-section">
+    <section class="product-designer-section" id="product-designer-section">
         <div class="product-text">
             <div class="product-left">
                 <h1>Product Designer</h1>
@@ -351,7 +351,7 @@
         </div>
     </section>
 
-    <footer class="faq-section">
+    <footer class="faq-section" id="faq-section">
        <div class="faq-part">
         <h4>FAQ</h4>
         <p>Frequently asked questions</p>
