--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/svgs/favicon/part+1+p-1320568343314317876.webp" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
        
-    <title>Document</title>
+    <title>Portfolio Creator</title>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             <a href="#projects-section">Projects</a>
             <a href="#blog-section">Blog</a>
             <a href="#introsection">Book a call</a>
-            <a href="#faq-section"><img src="./assets/svgs/arrow.svg" alt=""></a>
+            <a href="#faq-section"><img src="./assets/svgs/arrow.svg" ></a>
 
         </nav>
     </header>
@@ -53,18 +54,18 @@
         <h3>Trusted by</h3>
         <div class="trusted-by-companents">
             <div class="companents1">
-                <img src="./assets/svgs/trusted-companents/companents1.svg" alt="">
+                <img src="./assets/svgs/trusted-companents/companents1.svg" alt="sirket">
             </div>
             <div class="companents2">
-                <img src="./assets/svgs/trusted-companents/companents2.svg" alt="">
+                <img src="./assets/svgs/trusted-companents/companents2.svg" alt="sirket">
 
             </div>
             <div class="companents3">
-                <img src="./assets/svgs/trusted-companents/companents3.svg" alt="">
+                <img src="./assets/svgs/trusted-companents/companents3.svg" alt="sirket">
 
             </div>
             <div class="companents4">
-                <img src="./assets/svgs/trusted-companents/companents4.svg" alt="">
+                <img src="./assets/svgs/trusted-companents/companents4.svg" alt="sirket">
             </div>
 
         </div>
@@ -75,7 +76,7 @@
         <h1>Design that solves problems, <br> one product at a time.</h1>
         <div class="services-cards">
             <div class="service-card">
-                <img src="./assets/svgs/services-section/service-card1.svg" alt="">
+                <img src="./assets/svgs/services-section/service-card1.svg" alt="service">
                 <h4>What I can do for you</h4>
                 <p>Faster, better products that your <br> users love. Here's all the services <br> I provide:</p>
                 <ul>
@@ -85,7 +86,7 @@
                 </ul>
             </div>
             <div class="service-card">
-                <img src="./assets/svgs/services-section/service-card2.svg" alt="">
+                <img src="./assets/svgs/services-section/service-card2.svg" alt="service">
                 <h4>Applications I'm fluent in</h4>
                 <p>Every designer needs the right <br> tools to do the perfect job. <br> Thankfully, I'm multilingual.
                 </p>
@@ -96,7 +97,7 @@
                 </ul>
             </div>
             <div class="service-card">
-                <img src="./assets/svgs/services-section/service-card3.svg" alt="">
+                <img src="./assets/svgs/services-section/service-card3.svg" alt="service">
                 <h4>What you can expect</h4>
                 <p>I design products that are more <br> than pretty. I make them shippable <br> and usable.</p>
                 <ul>
@@ -129,7 +130,7 @@
                     <h4>Soulful Rebrand</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" ></a>
                     </div>
                 </div>
             </div>
@@ -143,7 +144,7 @@
                     <h4>Datadash Product design</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" ></a>
                     </div>
                 </div>
 
@@ -158,7 +159,7 @@
                     <h4>Maize Website Design</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" alt=""></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg"></a>
                     </div>
                 </div>
 
@@ -179,7 +180,7 @@
                 <h1>Latest Blogs</h1>
                 <div class="main-blog-link">
                     <a class="view-all" href="#">View all</a>
-                    <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                    <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" ></a>
                 </div>
             </div>
             <div class="blog-right-side">
@@ -188,7 +189,7 @@
                     <h4>Design tips for designers, that cover <br> everything you need</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="">Read the article</a>
-                        <a href=""><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                        <a href=""><img class="arrow-white" src="./assets/svgs/arrow-white.svg" ></a>
                     </div>
                 </div>
                 <div class="article">
@@ -196,7 +197,7 @@
                     <h4>How to build rapport with your web design <br> clients</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="#">Read the article</a>
-                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" ></a>
                     </div>
                 </div>
                 <div class="article">
@@ -204,7 +205,7 @@
                     <h4>Top 6 free website mockup tools 2021</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="#">Read the article</a>
-                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg"></a>
                     </div>
                 </div>
                 <div class="article">
@@ -212,7 +213,7 @@
                     <h4>Logo design trends to avoid in 2021</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="#">Read the article</a>
-                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg"></a>
                     </div>
                 </div>
                 <div class="article">
@@ -220,7 +221,7 @@
                     <h4>22 best UI design tools</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="">Read the article</a>
-                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" alt=""></a>
+                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg"></a>
                     </div>
                 </div>
 
@@ -256,7 +257,7 @@
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>Stanford University</h4>
-                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg"></a>
                 </div>
                 <div class="education-companent-bottom">
                     <h6>MSc (Human Computer Interaction)</h6>
@@ -266,7 +267,7 @@
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>MIT Summer School</h4>
-                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg"></a>
                 </div>
                 <div class="education-companent-bottom">
                     <h6>UX Training Bootcamp</h6>
@@ -276,7 +277,7 @@
             <div class="education-companent">
                 <div class="education-companent-top">
                     <h4>California State University</h4>
-                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg"></a>
                 </div>
                 <div class="education-companent-bottom">
                     <h6>BSc in Software Engineering</h6>
@@ -287,10 +288,10 @@
         <div class="work-experience">
             <h1>💼 Work Experience</h1>
             <div class="work-experience-companent">
-                <div class="work-icon cehrayi"><img src="./assets/svgs/education-work-section/icon1.svg" alt=""> </div>
+                <div class="work-icon cehrayi"><img src="./assets/svgs/education-work-section/icon1.svg"> </div>
                 <div class="work-experience-companent-top">
                     <h4>SpaceFleet</h4>
-                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg"></a>
                 </div>
                 <div class="work-experience-companent-bottom">
                     <h6>Senior Product Designer</h6>
@@ -298,10 +299,10 @@
                 </div>
             </div>
             <div class="work-experience-companent">
-                <div class="work-icon mavi"><img src="./assets/svgs/education-work-section/icon2.svg" alt=""> </div>
+                <div class="work-icon mavi"><img src="./assets/svgs/education-work-section/icon2.svg"> </div>
                 <div class="work-experience-companent-top">
                     <h4>MusicMash</h4>
-                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg"></a>
                 </div>
                 <div class="work-experience-companent-bottom">
                     <h6>Information Architect</h6>
@@ -309,10 +310,10 @@
                 </div>
             </div>
             <div class="work-experience-companent">
-                <div class="work-icon sari"><img src="./assets/svgs/education-work-section/icon3.svg" alt=""> </div>
+                <div class="work-icon sari"><img src="./assets/svgs/education-work-section/icon3.svg"> </div>
                 <div class="work-experience-companent-top">
                     <h4>Kingdom</h4>
-                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg" alt=""></a>
+                    <a class="education-arrow" href=""><img src="./assets/svgs/education-work-section/arrow.svg"></a>
                 </div>
                 <div class="work-experience-companent-bottom">
                     <h6>UI Designer</h6>
