--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1>Design that solves problems, <br> one product at a time.</h1>
         <div class="services-cards">
             <div class="service-card">
-                <img src="./assets/svgs/services-section/service-card1.svg" alt="service">
+                <div class="logo-container"><div class="service-logo"><img src="./assets/svgs/services-section/service-card1.svg" alt="service"></div></div>
                 <h4>What I can do for you</h4>
                 <p>Faster, better products that your <br> users love. Here's all the services <br> I provide:</p>
                 <ul>
@@ -86,7 +86,7 @@
                 </ul>
             </div>
             <div class="service-card">
-                <img src="./assets/svgs/services-section/service-card2.svg" alt="service">
+                <div  class="logo-container"><div class="service-logo"><img src="./assets/svgs/services-section/service-card2.svg" alt="service"></div></div>
                 <h4>Applications I'm fluent in</h4>
                 <p>Every designer needs the right <br> tools to do the perfect job. <br> Thankfully, I'm multilingual.
                 </p>
@@ -97,7 +97,7 @@
                 </ul>
             </div>
             <div class="service-card">
-                <img src="./assets/svgs/services-section/service-card3.svg" alt="service">
+               <div  class="logo-container"><div class="service-logo"><img src="./assets/svgs/services-section/service-card3.svg" alt="service"></div></div>
                 <h4>What you can expect</h4>
                 <p>I design products that are more <br> than pretty. I make them shippable <br> and usable.</p>
                 <ul>
@@ -334,7 +334,7 @@
                 <img src="./assets/svgs/testimonials-section/boy-img.svg" alt="">
             </div>
             <div class="testimonials-text">
-                <img src="./assets/svgs/testimonials-section/dirnaq.svg" alt="">
+                <div class="testimon-dirnaq-container"><div class="testimon-dirnaq"><img src="./assets/svgs/testimonials-section/dirnaq.svg" alt=""></div></div>
                 <p>Jade helped us build a software so <br> intuitive that it didn't need a <br> walkthrough. He solved complex <br>
                     problems with brilliant design.</p>
                     <div class="john-side-arrow">
